# network-management-client

./: .eslintrc.cjs  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  HARDWARE.MD  README.md  TESTING.MD  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/algorithms/: articulationpoint.js  graph.js  graph.rs
src-tauri/bindings/: ChannelMessagePayload.ts  ChannelMessageWithAck.ts  ChannelMessageWithState.ts  MeshChannel.ts  MeshDevice.ts  MeshDeviceStatus.ts  MeshNode.ts  MeshNodeDeviceMetrics.ts  MeshNodeEnvironmentMetrics.ts  MessagePacket.ts  MessageType.ts  MessageWithAck.ts  PositionPacket.ts  TelemetryPacket.ts  TextPacket.ts  UserPacket.ts  WaypointIDWithAck.ts  WaypointPacket.ts
src-tauri/bindings/protobufs/: AddressMode.ts  AdminMessage.ts  AltSource.ts  AudioBaud.ts  AudioConfig.ts  BluetoothConfig.ts  CannedMessageConfig.ts  CannedMessageModuleConfig.ts  Channel.ts  ChannelFile.ts  ChannelSet.ts  ChannelSettings.ts  Compressed.ts  Config.ts  ConfigType.ts  Constants.ts  Control.ts  CriticalErrorCode.ts  Data.ts  Delayed.ts  DeviceConfig.ts  DeviceMetadata.ts  DeviceMetrics.ts  DeviceState.ts  DisplayConfig.ts  DisplayMode.ts  DisplayUnits.ts  EnvironmentMetrics.ts  Error.ts  EthMode.ts  ExternalNotificationConfig.ts  FromRadio.ts  GpsCoordinateFormat.ts  HardwareMessage.ts  HardwareModel.ts  Heartbeat.ts  History.ts  InputEventChar.ts  IpV4Config.ts  Level.ts  (+49 more)
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: GLOBALMINCUT.md  articulation_point.rs  articulationpoints.rs  globalmincut.rs  graph.rs  graph_p.rs  lib.rs  main.rs  state.rs
src-tauri/src/algorithms/: BankBranch.java  GLOBALMINCUT.md  articulation_point.rs  diffcen.rs  globalmincut.js  globalmincut.rs  graph.js  mod.rs  stoer_wagner.rs
src-tauri/src/analytics/: README.md  algo_controller.rs  algo_store.rs  algos_config.rs  configuration.rs  controller.rs  global_state.rs  history.rs  mod.rs  results_store.rs  state.rs
src-tauri/src/analytics/algo_result_enums/: ap.rs  diff_cen.rs  eigenvals.rs  mod.rs  most_sim_timeline.rs  pred_state.rs  sw_cut.rs
src-tauri/src/analytics/algorithms/: articulation_point.rs  diffcen.rs  globalmincut.rs  mod.rs  stoer_wagner.rs
src-tauri/src/analytics/algorithms/articulation_point/: mod.rs  results.rs
src-tauri/src/analytics/algorithms/diffusion_centrality/: mod.rs  results.rs
src-tauri/src/analytics/algorithms/global_mincut/: mod.rs  results.rs
src-tauri/src/analytics/algorithms/karger_stein/: mod.rs
src-tauri/src/analytics/aux_data_structures/: binary_heap.rs  mod.rs  stoer_wagner_ds.rs  timeline.rs  union_find.rs
src-tauri/src/analytics/aux_functions/: convert_to_graph_from_string.rs  edge_factory.rs  get_most_similar.rs  mod.rs  take_snapshot.rs
src-tauri/src/analytics/data_structures/: binary_heap.rs  cut.rs  mod.rs  stoer_wagner_ds.rs  timeline.rs  union_find.rs
src-tauri/src/analytics/state/: configuration.rs  controller.rs  history.rs  mod.rs  store.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/contracts/: connections.rs  graph.rs  mesh.rs  mod.rs  radio.rs
src-tauri/src/api/primitives/: connections.rs  graph.rs  mesh.rs  mod.rs  radio.rs
src-tauri/src/aux_data_structures/: binary_heap.rs  cut.rs  eigens.rs  mod.rs  neighbor_info.rs  stoer_wagner_ds.rs  timeline.rs  union_find.rs
src-tauri/src/aux_functions/: adj_matrix.rs  adjacency_matrix.rs  commands.rs  conversion_factors.rs  convert_to_graph_from_string.rs  datatypes.rs  distance_conversion_factors.rs  edge_factory.rs  get_most_similar.rs  graph_init.rs  handle_disc.rs  mod.rs  neighbor_factory.rs  take_snapshot.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/constructors/: mod.rs
src-tauri/src/constructors/init/: init_edge_map.rs  init_graph.rs  init_node_map.rs  mod.rs
src-tauri/src/constructors/mock/: mocks.rs  mod.rs
src-tauri/src/data_conversion/: distance_constants.rs  distance_conversion.rs  mod.rs
src-tauri/src/device/: connection.rs  helpers.rs  mesh_graph.rs  mod.rs  senders.rs  state.rs
src-tauri/src/device/connections/: handlers.rs  helpers.rs  mod.rs  stream_api.rs  stream_buffer.rs
src-tauri/src/device/handlers/: mod.rs  packet_router.rs
src-tauri/src/device/serial_connection/: handlers.rs  mod.rs
src-tauri/src/distance_conversion/: distance_constants.rs  distance_conversion.rs  mod.rs
src-tauri/src/domains/: connections.rs  graph.rs  mesh.rs  mod.rs  radio.rs
src-tauri/src/global/: algo_controller.rs  algo_store.rs  algos_config.rs  global_state.rs  history.rs  mod.rs
src-tauri/src/graph/: edge.rs  graph.rs  graph_ds.rs  handlers.rs  mod.rs  node.rs
src-tauri/src/graph/api/: mod.rs  update_from_packet.rs
src-tauri/src/graph/ds/: edge.rs  graph.rs  node.rs
src-tauri/src/ipc/: commands.rs  events.rs  helpers.rs  mod.rs
src-tauri/src/ipc/commands/: connections.rs  graph.rs  mesh.rs  mod.rs  radio.rs
src-tauri/src/mesh/: device.rs  mod.rs  serial_connection.rs  store.rs
src-tauri/src/mesh/device/: connection.rs  handlers.rs  helpers.rs  mod.rs  state.rs
src-tauri/src/mesh/serial_connection/: handlers.rs  helpers.rs  mod.rs
src-tauri/src/meta/: algo_store.rs  algos_config.rs  meta_state.rs  mod.rs
src-tauri/src/mocks/: mock_generator.rs  mocks.rs  mod.rs
src-tauri/src/mocks/init/: init_edge_map.rs  init_graph.rs  init_node_map.rs  mod.rs
src-tauri/src/packet_api/: mod.rs  router.rs
src-tauri/src/packet_api/handlers/: mod.rs
src-tauri/src/state/: autoconnect.rs  graph.rs  mesh_devices.rs  mod.rs  radio_connections.rs
src-tauri/src/state_err_enums/: ap.rs  diff_cen.rs  eigenvals.rs  mincut.rs  mod.rs  most_sim_timeline.rs  pred_state.rs  sw_cut.rs
(+270 files in other folders)
