[package]
name = "app"
version = "0.3.0"
description = "Meshtastic Network Management Client"
authors = ["Adam McQuilkin"]
license = "GPL-3.0"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.1"
protoc-bin-vendored = "3.0.0"
tauri-build = { version = "1.1.1", features = [] }
walkdir = "2.3.2"

[dependencies]
rand = "0.8.5"
petgraph = { version = "0.6.2", features = ["serde-1"] }
nalgebra = "0.32.1"
defaultdict = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-os = "2.0.0-alpha.0"
tauri-plugin-shell = "2.0.0-alpha.0"
tauri-plugin-cli = "2.0.0-alpha.0"
tauri-plugin-window = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-notification = "2.0.0-alpha.1"
tauri-plugin-clipboard-manager = "2.0.0-alpha.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
prost = "0.11.0"
bytes = "1.2.1"
async-trait = "0.1.68"
time = { version = "0.3.17", features = ["macros", "serde"] }
thiserror = "1.0.38"
geojson = "0.24.0"
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
tokio-util = "0.7.7"
serial2 = "0.1.7"
specta = { git = "https://github.com/ajmcquilkin/specta.git", branch = "ajmcquilkin/ts-namespaces", ref = "2ba5af7" }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
