[package]
name = "app"
version = "0.3.0"
description = "Meshtastic Network Management Client"
authors = ["Adam McQuilkin"]
license = "GPL-3.0"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
rand = "0.8.5"
petgraph = { version = "0.6.2", features = ["serde-1"] }
nalgebra = "0.32.1"
defaultdict = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["cli", "clipboard-write-text", "dialog-message", "http-all", "notification-all", "path-all", "shell-open", "windows7-compat"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bytes = "1.2.1"
async-trait = "0.1.68"
time = { version = "0.3.17", features = ["macros", "serde"] }
thiserror = "1.0.38"
geojson = "0.24.0"
log = "0.4.20"
fern = "0.6"
humantime = "2.1.0"
tokio-util = "0.7.7"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio-serial = "5.4.4"
meshtastic = { git = "https://github.com/meshtastic/rust", features = ["ts-gen"], rev = "c7cf9b9" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
